--- a/INSTALL
+++ b/INSTALL
@@ -7,20 +7,20 @@
 
    Go to directory `gentle' and type
 
-	 build
+	 ./build.sh
 
    This creates the executable program `gentle', the Gentle compiler,
    as well as the the object file `grts.o', the Gentle runtime system.
 
    Go to directory `lib' and type
 
-	 build
+	 ./build.sh
 
    This compiles the modules of the user library.
 
    Go to directory `reflex' and type
 
-	 build
+	 ./build.sh
 
    This creates the executable program `reflex',
    a generator for Lex specifications.
